code25_all/scala/4617874.txt
Function1[_, String]
scala> def f(x: Int) = x.toString
f: (x: Int)java.lang.String

scala> f(8)
res0: java.lang.String = 8

scala> val g: Function1[_, String] = f _
g: Function1[_, String] = <function1>

scala> g(8)
<console>:8: error: type mismatch;
 found   : Int(8)
 required: _$1 where type _$1
       g(8)
         ^

scala> val h: Function1[Int, String] = g
<console>:7: error: type mismatch;
 found   : (_$1) => String where type _$1
 required: (Int) => String
       val h: Function1[Int, String] = g

g
